--- a/AndroidRTC-android-studio-sprint3/app/src/main/res/layout/dialog_change_password.xml
+++ b/AndroidRTC-android-studio-sprint3/app/src/main/res/layout/dialog_change_password.xml
@@ -45,7 +45,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_change_password"
+        android:id="@+id/btn_change_password2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ti_new_password"
@@ -67,7 +67,7 @@
     <TextView
         android:id="@+id/tv_message"
         android:visibility="gone"
-        android:layout_below="@+id/btn_change_password"
+        android:layout_below="@+id/btn_change_password2"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/holo_red_dark"
         android:layout_width="wrap_content"
