--- a/AndroidRTC-android-studio-sprint3/app/src/main/res/layout/fragment_login.xml
+++ b/AndroidRTC-android-studio-sprint3/app/src/main/res/layout/fragment_login.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/logo_height"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/logo"/>
+                android:src="@drawable/besideyou_logo"/>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/ti_email"
